Melhorias Pagina Home
Melhorias Pagina Home

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,19 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="background: black">
 <div style="text-align:center">
-  <h1 style="background-color:rgb(66, 66, 66); color: snow">
+  <h1 style="color: snow">
     {{ title }}
   </h1>
 </div>
+<div style="background-color:rgb(66, 66, 66); color: snow">
+  <a style=" color: azure; margin-left: 10px" target="_blank" rel="noopener" href="">Home</a>
+  <a style="color: azure; margin-left: 10px" target="_blank" rel="noopener" href="">Quem Sou</a>
+  <a style="color: azure; margin-left: 10px" target="_blank" rel="noopener" href="">Contato</a>
+</div>
 <div class="row" style="text-align:center">
-  <img width="300" alt="Ronnie Tocando" src="src/assets/img/ronnie-violao1.JPG">
-  <img width="400" alt="Ronnie Tocando" src="src/assets/img/ronnie-violao1.JPG">
-  <img width="300" alt="Ronnie Tocando" src="src/assets/img/ronnie-violao1.JPG">
+  <img style="margin-right: 15px; margin-left: 10px" width="300" alt="Ronnie Tocando" src="src/assets/img/ronnie-banda1.JPG">
+  <img style="margin-right: 15px; margin-left: 10px" width="400" alt="Ronnie Tocando" src="src/assets/img/ronnie-violao1.JPG">
+  <img style="margin-right: 10px; margin-left: 10px" width="300" alt="Ronnie Tocando" src="src/assets/img/ronnie-banda2.JPG">
 </div>
 
 
@@ -16,7 +21,7 @@
 
 
 <h2 style="background-color: skyblue; color:black">Me acompanhe também nas redes social: </h2>
-<a target="_blank" rel="noopener" href="https://www.facebook.com/ronnie.porto"><img width="40" style="margin-right: 10px" alt="Ronnie Tocando" src="src/assets/img/facebook.png"></a>
+<a style="margin-left: 10px" target="_blank" rel="noopener" href="https://www.facebook.com/ronnie.porto"><img width="40" style="margin-right: 10px" alt="Ronnie Tocando" src="src/assets/img/facebook.png"></a>
 <a target="_blank" rel="noopener" href="https://www.instagram.com/ronnie12porto/"><img width="40" style="margin-right: 10px" alt="Ronnie Tocando" src="src/assets/img/instagram.png"></a>
 <a target="_blank" rel="noopener" href="https://twitter.com/ronnieporto12"><img width="45" alt="Ronnie Tocando" src="src/assets/img/twitter.png"></a>
 </div>
