--- a/src/app/quem-sou/quem-sou.component.html
+++ b/src/app/quem-sou/quem-sou.component.html
@@ -6,7 +6,7 @@
 </h3>
 
 <h4 style="font-family: Arial, Helvetica, sans-serif; color: azure">
- " Não fui eu que lhe ordei ? 
+ " Não fui eu que lhe ordenei ? 
  Seja forte e corajoso!
  Não se apavore, nem desanime, pois o senhor
  o seu Deus, estará com você,
