--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
 <div style="background-color:rgb(66, 66, 66); color: snow">
   <a style=" color: azure; margin-left: 10px" target="_blank" rel="noopener" href="">Home</a>
   <a style="color: azure; margin-left: 10px" target="_blank" rel="noopener" href="">Quem Sou</a>
+  <a style="color: azure; margin-left: 10px" target="_blank" rel="noopener" href="">Fotos/Videos</a>
   <a style="color: azure; margin-left: 10px" target="_blank" rel="noopener" href="">Contato</a>
 </div>
 <div class="row" style="text-align:center">
@@ -20,7 +21,7 @@
 <quem-sou style="text-align: center"></quem-sou>
 
 
-<h2 style="background-color: skyblue; color:black">Me acompanhe também nas redes social: </h2>
+<h2 style="background-color: skyblue; color:black">Me acompanhe também nas redes sociais: </h2>
 <a style="margin-left: 10px" target="_blank" rel="noopener" href="https://www.facebook.com/ronnie.porto"><img width="40" style="margin-right: 10px" alt="Ronnie Tocando" src="src/assets/img/facebook.png"></a>
 <a target="_blank" rel="noopener" href="https://www.instagram.com/ronnie12porto/"><img width="40" style="margin-right: 10px" alt="Ronnie Tocando" src="src/assets/img/instagram.png"></a>
 <a target="_blank" rel="noopener" href="https://twitter.com/ronnieporto12"><img width="45" alt="Ronnie Tocando" src="src/assets/img/twitter.png"></a>
